<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="item"
                type="eti.com.abellopes.repository.model.Heroi"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:backgroundTint="@color/colorBackgroundDefault">
        <androidx.cardview.widget.CardView android:layout_width="128dp"
                                           android:layout_height="128dp"
                                           app:layout_constraintTop_toTopOf="parent"
                                           app:layout_constraintStart_toStartOf="parent"
                                           app:layout_constraintBottom_toBottomOf="parent"
                                           app:layout_constraintEnd_toEndOf="parent" android:id="@+id/cardView"
                                           app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="8dp"
                                           android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
                                           app:cardBackgroundColor="@android:color/transparent">
            <ImageView
                    android:id="@+id/picture"
                    android:contentDescription="@string/avatar"
                    tools:srcCompat="@drawable/ic_user_generic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView android:layout_width="0dp"
                                           android:layout_height="match_parent"
                                           app:layout_constraintTop_toTopOf="parent"
                                           app:layout_constraintBottom_toBottomOf="parent"
                                           app:layout_constraintEnd_toEndOf="parent" android:id="@+id/cardView2"
                                           app:layout_constraintStart_toEndOf="@+id/cardView"
                                           android:layout_marginStart="8dp"
                                           app:layout_constraintVertical_bias="0.26999998"
                                           app:cardBackgroundColor="@android:color/transparent">
            <TextView
                    android:id="@+id/name"
                    android:text="@{item.name}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:contentDescription="@string/textview" tools:text="@string/user_name"
                    android:backgroundTint="@color/cardview_light_background"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView android:layout_width="0dp"
                                           android:layout_height="match_parent"
                                           app:layout_constraintTop_toTopOf="parent"
                                           app:layout_constraintBottom_toBottomOf="parent"
                                           app:layout_constraintEnd_toEndOf="parent"
                                           android:id="@+id/cardView3"
                                           app:layout_constraintStart_toEndOf="@+id/cardView"
                                           android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.77"
                                           android:backgroundTint="@color/cardview_light_background"
                                           app:cardBackgroundColor="@android:color/transparent">
            <TextView
                    android:id="@+id/description"
                    android:text="@{item.description}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:contentDescription="@string/descripitionTextview"
                    tools:text="@string/descripition" android:backgroundTint="@color/cardview_light_background"/>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>